--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 </head>
 
 <body>
-    <div class="game"></div>
-    <!-- <div class="control"></div> -->
+    <div class="container">
+        <div class="game"></div>
+        <div class="control">
+            <h1>SNAKE</h1>
+            <span>Score:</span>
+            <span class="score">0</span>
+            <button class="mode">Light</button>
+        </div>
+    </div>
+
 </body>
 <script type="module" src="./game.js"></script>
 
